# cmake-sqlitecpp

./: .gitmodules  CMakeLists.txt  README.md  build.sh
src/: main.cpp
